@@ -151,7 +151,7 @@ CAPTION "Clear Clipboard"
 FONT 8, "MS Sans Serif", 0, 0, 0x0
 BEGIN
     ICON            IDI_MBINFOICON,IDC_STATIC,15,7,20,20
-    LTEXT           "The password of the selected item has been copied to the clipboard. The clipboard will be securely cleared when Password Safe is closed.\r\n\r\nPressing Cancel stops the password being copied.",IDC_STATIC,47,7,194,47
+    LTEXT           "Pressing OK will copy the password of the selected item to the clipboard. The clipboard will be securely cleared when Password Safe is closed.\r\n\r\nPressing Cancel stops the password being copied.",IDC_STATIC,47,7,194,47
     CONTROL         "&Don't remind me again",IDC_CLEARCHECK,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,47,60,149,10
     DEFPUSHBUTTON   "OK",IDOK,66,79,50,14
     PUSHBUTTON      "Cancel",IDCANCEL,132,79,50,14
