@@ -128,6 +128,7 @@ BEGIN
         MENUITEM "Send &email",                 ID_MENUITEM_SENDEMAIL, MFT_STRING
         MENUITEM "Browse to URL + Autotype",    ID_MENUITEM_BROWSEURLPLUS, MFT_STRING
         MENUITEM "Perform Auto&type",           ID_MENUITEM_AUTOTYPE, MFT_STRING
+        MENUITEM "Copy Run Command to Clipboard",  ID_MENUITEM_COPYRUNCOMMAND, MFT_STRING
         MENUITEM "&Run Command",                ID_MENUITEM_RUNCOMMAND, MFT_STRING
         MENUITEM "Create &Shortcut",            ID_MENUITEM_CREATESHORTCUT, MFT_STRING
         MENUITEM "&Go to Base entry",           ID_MENUITEM_GOTOBASEENTRY, MFT_STRING
@@ -200,6 +201,7 @@ BEGIN
         MENUITEM "Copy &Notes to Clipboard",    ID_MENUITEM_COPYNOTESFLD
         MENUITEM "Copy &URL to Clipboard",      ID_MENUITEM_COPYURL
         MENUITEM "Copy Email to Clipboard",     ID_MENUITEM_COPYEMAIL
+        MENUITEM "Copy Run Command to Clipboard",  ID_MENUITEM_COPYRUNCOMMAND
         MENUITEM SEPARATOR
         MENUITEM "Send &email",                 ID_MENUITEM_SENDEMAIL
         MENUITEM "&Browse to URL",              ID_MENUITEM_BROWSEURL
@@ -351,6 +353,7 @@ BEGIN
     ID_MENUITEM_COPYNOTESFLD     "\nCopy Notes to Clipboard"
     ID_MENUITEM_CLEARCLIPBOARD   "\nClear the clipboard contents"
     ID_MENUITEM_AUTOTYPE         "\nPerform Autotype"
+    ID_MENUITEM_COPYRUNCOMMAND   "\nCopy Run Command to Clipboard"
     ID_MENUITEM_RUNCOMMAND       "\nRun Command"
     ID_MENUITEM_BROWSEURL        "\nBrowse to URL/Send Email"
     ID_MENUITEM_BROWSEURLPLUS    "\nBrowse to URL + Autotype"
@@ -413,6 +416,7 @@ BEGIN
     "O",            ID_MENUITEM_OPEN,       VIRTKEY, CONTROL
     "Q",            ID_MENUITEM_EXIT,       VIRTKEY, CONTROL
     "R",            ID_MENUITEM_RUNCOMMAND,  VIRTKEY, CONTROL
+    "R",            ID_MENUITEM_COPYRUNCOMMAND, VIRTKEY, CONTROL, ALT
     "S",            ID_MENUITEM_SAVE,       VIRTKEY, CONTROL
     "S",            ID_TOOLBUTTON_FINDCASE, VIRTKEY, CONTROL, ALT
     "T",            ID_MENUITEM_AUTOTYPE,   VIRTKEY, CONTROL
